# SingleLinkList

./: CMakeLists.txt  REAME.md  main.cpp
include/: addElement.hpp  exportList.hpp  findMax.hpp  initNode.hpp
src/: addElement.cpp  exportList.cpp  findMax.cpp  initNode.cpp
